# Checkers-engine

./: CMakeLists.txt  README.md  main.cpp
include/: Board.h  Color.h  EventListener.h  Field.h  Figure.h  MoveFinder.h  PositionDrawer.h  PositionRater.h
src/: Board.cpp  EventListener.cpp  Field.cpp  Figure.cpp  MoveFinder.cpp  PositionDrawer.cpp  PositionRater.cpp  main.cpp
